Replace the in-process Jetty-based Jenkins execution with a forked java -jar jenkins.war process using Winstone. This eliminates the Jetty-specific maintenance headaches and improves compatibility.